added models, video section on main page

--- a/_includes/colonies/OrbitalColony.html
+++ b/_includes/colonies/OrbitalColony.html
@@ -2,15 +2,43 @@
 			<section>
 			<article class="outerDiv">
 				<div class="innerDiv">
-					<h1>Orbital colonies - Now we travel the heavens at will</h1>
-					<p>
-						Orbital tethers need asteroids as their stabilizing central mass, and
-						those asteroids are a great place to start a space station.
-						
-						A base in free space is fundamentally different from a surface colony. Without being located deep inside a gravity well
-						it remains easily accessible and possible to move.
+					<h1>Colonies in Orbit</h1>
+					<p>The first skyhooks have space stations on their anchor masses that host sizable crews, but those crews rotate once a year or less. Once Cernan's Promise starts shipping structures and components, they are fitted with rotating sections that imitate almost a full gravity. That allow crews to be healthy for such periods, but the stations remain too small and dreary for someone to live there longer than the duration of a work contract.
+					</p>
+					<p>The Earth Equatorial Space Station built to support lunar settlement has larger rotating sections that feel a little homier. Initial investigation into how plants and animals adapt to conditions on the Moon are done there, in parts of the rotating sections that imitate lunar gravity. Once the EESS reaches its full size, living there for even two or three years is pleasant enough thanks to those rotating sections and all the other spaces it has.
+					</p>
+					<p>A second space station built in low Earth orbit 25 years later, Tesseract Station, is the first installation with actual O'Neill cylinders. They are small but allow the form to be explored, in preparation for the first true O'Neill colony that will soon be built onto one side of Gagarin Station, across from the Shipyard. Also, those cylinders are designed to be extended and expanded over time. That extensibility becomes a standard feature of cylinder designs.
+					</p>
+					<p>The ability to provide something that feels very similar to gravity on Earth is the thing that may make O'Neill cylinders key to truly living in space. There are several versions of the core concept of a large cylinder that rotates to create a centrifugal force like gravity on their inner walls. There are different ways of solving the question of how to get enough sunlight into the interior in a natural-feeling way, and to protect inhabitants from the radiation of space. But it is the artificial gravity that makes them important.
+					</p>
+					<p>Some large fraction of the gravity on Earth may be critical for healthy pregnancy and healthy growth of a child. There seems now to be enough evidence to be confident adults can live in good health in a place with low gravity, though they may need to make regular use of small artificial gravity facilities, exercise conscientiously, and perhaps take medicine. There is no evidence this is the case for pregnancy and childhood, and significant evidence it is, at the least, problematic.
+					</p>
+					<p>So, all colonized worlds in the timeline have O'Neill cylinders in easy reach. It may always be necessary to have them in order to raise healthy children, or the medical issues may be resolved. In any case, they are beautiful spaces, if rather strange, and serve their purposes. They are more space in which food can be grown, in a high-density manner, with harvests three to eight times a year for any given plant. They provide homes to people whose careers keep them close to the manufacturing and research facilities that accompany the cylinders. They are the normal meeting place for the kind of people who move between worlds often, and develop cultures that suit them. They might be called uber-worldly.
+					</p>
+					<p>O'Neill cylinders are connected to the anchor masses of all the surface skyhooks in the SITH. Built on the feet of the launch skyhooks are half-bubble platforms so large they too can house thousands of people. These places are mostly used for recreation. Their mass is necessarily restricted by the skyhook they exist to balance, and so while beautiful places, they are too small for people to really live there.
+					</p>
+					<h5>Models Coming Soon</h5>
+					<p>Further explanation of these structures shall come after the models of them have been built and set up in the virtual colonies.
 					</p>
 					</div>
 				</article>
 			</section>
+			<aside>
+				<figure class="sideDiv">
+					<img src="img/GuidiceOneillColony.jpg" alt="Twin O'Neill cylinders with three mirrors connected at their far ends, reflecting sun into each one, and solar power units, infrastructure and a large radio dish">
+					<figcaption>This portrayal by <a href="http://rickguidice.com/nasaart/nasaarti.html">Rick Guidice</a> of a classic O'Neill cylinder gets across all the key design elements. The long tilted mirrors attached at the far ends of the pressurized tubes reflect in enough sun to nicely illuminate the ground across from the windows that cover the sixth of the circumference of the cylinder matching each mirror. To an observer inside, the sun comes from above and appears its normal size. This is the chief advantage of this particular version. The drawing also shows a concentrated solar power concept, that is the purpose of the many small cylinders around the near end of the habitat cylinders.
+					</figcaption>
+				</figure>
+			</aside>
 		</div>
+		<section class="frameContainer" id="skyhookModels">
+		 <div class="framePairTop">
+		  <div class="framewrap frame16x9" id="gagarin">
+								<iframe src="gagarin.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+								</iframe>
+				</div>
+		 </div>
+		 <div class="framePairBottom">
+			An initial model of the Station of Gagarin Skyhook. The design has changed since this was built, so it hasn't been labelled. Instead, we'll build a new one and label that. It was decided that it is better for a larger O'Neill cylinder to be built on one side of the main anchor mass, and the shipyard to be located on the other side.
+		 </div>
+		</section>
