--- a/_includes/colonies/asideInukshukColony.html
+++ b/_includes/colonies/asideInukshukColony.html
@@ -7,7 +7,7 @@
 			</figure>
 			<figure class="sideDiv">
 				<img src="img/PearyIllumination.jpg" alt="illumination map of sun at the north pole">
-				<figcaption>The rims of Whipple and Hinshelwood craters, at the north end of Peary, could be the best places for habitats and infrastructure. This illumination map shows both have areas of near constant sun. Whipple Crater is deeper, and seems to have a somewhat larger and flatter area in persistent sunlight, so it will get the virtual colony. For a better look, go to this <a href="http://bit.ly/2j3qNw9">Quickmap</a> link of the spot. Quickmap also has lots of other data you can see by playing with the menu that opens when you click the three diamonds in the top left corner.
+				<figcaption>The rims of Hinshelwook and Whipple craters, at the north end of Peary, could be the best places for habitats and infrastructure. This illumination map shows both have areas of near constant sun. Hinshelwood Crater is on the Moon's near side, closer to the exact north pole, shallower, and seems to have a somewhat larger and flatter area in persistent sunlight (or from which the sun can be easily reached), so it will get the first polar colony. It's the one on the bottom left. For a better look, go to this <a href="http://bit.ly/2mU9Wja">Quickmap</a> link of the spot. Quickmap also has lots of other data you can see by playing with the menu bar.
 				</figcaption>
 			</figure>
 		</aside>
