--- a/_includes/colonies/colonyModelsLalande.html
+++ b/_includes/colonies/colonyModelsLalande.html
@@ -28,7 +28,7 @@
 			</iframe>
 		</div>
 		<div class="framePairBottom">
-    This cutaway lets you appreciate the structure and layout of this atrium and sunken hall combination. It is the first full habitat - the first built on-site, not a prefab tube hab made on Earth.
+    This cutaway lets you appreciate the structure and layout of this atrium and sunken hall combination. It is the initial habitat at Cernan's Promise, and it is built almost entirely on-site.
 		</div>
 	</div>
 	<div class="framePairTop">
@@ -56,6 +56,6 @@
 		</div>
 	</div>
 	<div class="framePairBottom">
-  Lalande City, home to a million people. Well, the beginnings of it. It takes an awful lot of quartz to make that dome, but what you get is pretty snazzy.
+  Lalande City, home to a million people. Right now only the segmented dome and towers are defined.
 	</div>
 </section>
