--- a/_includes/machines/machinesBuilding.html
+++ b/_includes/machines/machinesBuilding.html
@@ -25,65 +25,25 @@
 					and that's our whole idea.
 				</p>
 					<p>
-					All construction designs here are centered around the use
-					of melted regolith, in particular the basalt of the lunar
-					maria. When basalt is drawn into fibers it has
-					good tension strength. A material that is strong in tension
-					is the key to space development. Holding in an atmosphere
-					requires it. Basalt rope and cloth can be made
-					with no additives other than a thin application of a
-					sizing chemical to the surface of the threads. This
-					makes construction with basalt much easier.
+					All construction designs here are centered around the use of melted regolith to build most things. The basalt found in the lunar maria is especially useful. When basalt is drawn into fibers it has good tension strength. A material that is strong in tension is the key to space construction. Holding in an atmosphere requires it. Basalt rope and cloth can be made with no additives other than a thin application of a sizing chemical to the surface of the threads. This makes construction with basalt much easier.
 				</p>
 				<p>
-					Some highlands materials spun into fibers will also
-					have good tension strength, but likely need to
-					be processed to change their chemical composition
-					before that is true, and such processing would take
-					considerable infrastructure. Once they are, they might
-					also need to be embedded in a matrix, like fiberglass
-					is embedded in plastics on Earth. Glass fibers aren't
-					used for rope or fabric on Earth because it only takes
-					slight damage to cause the fibers to lose their
-					strength. On the other hand, quite possibly the
-					different chemistry and environment of the Moon means
-					that they would work well without needing a
-					protective matrix. Still, unless deposits very high
-					in silica are found, resource-intensive processing
-					will be needed in the highlands to produce
-					materials capable of containing an atmosphere. That
-					complicates construction of habitats a great deal, a
-					principal reason why only a small human colony will be
-					made at the pole, and then construction will be concentrated
-					at Lalande.
+					Some highlands materials spun into glass fibers will also have good tension strength, the question is how much they need to be processed before that's true. The first habitat built uses an approach that minimizes the use of tension elements in consideration of that. The membrane for the roof of First Hab is shipped from Earth, and the hab is built in an excavated pit so the walls and floor can contain an atmosphere with compressive strength only. Building in excavated pits is the technique for the first decades of development for this reason, and also for the radiation protection and thermal regulation provided. For Long Hab, the second habitat, either cables of basalt fiber will be spun using feedstock brought by the shuttles from the maria, or the more extensive infrastructure at that point can be used to create glass fiber from local material that is adequate. At worst, cables can be delivered from Earth.
+				</p>
+				<p>Quite possibly the different chemistry and environment of the Moon means that glass fibers made there would have much better strength, even without the use of a supporting matrix to reinforce them, as is used with fiberglass on Earth. <a href="https://www.lpi.usra.edu/publications/books/lunar_bases/LSBchapter07.pdf#pagemode=bookmarks&page=53">A paper by James Blacic</a> in <a href="https://www.lpi.usra.edu/publications/books/lunar_bases/">Lunar Bases and Space Activities of the 21st Century</a> explores this. Because there is virtually no water in the lunar environment (aside from the special case of the permanently shaded craters of the poles), glass made there will be free of the microscopic defects that are always in glass on Earth because water is everywhere here<sup class="note tooltip" data-tooltip-content="#glassStrength">
+				[?]</sup>.
+				</p>
+				<div class="tooltip_templates">
+				<span id="glassStrength">
+				"...in the hard vacuum of space, silicates derived from the Moon will not, if we can avoid contaminating them, exhibit the water-induced weakening that is so ubiquitous on Earth. In other words, lunar silicates may possess very high strengths due to an "anhydrous strengthening" effect relative to our common experience on Earth. This possibility has numerous implications for space industrialization" </span>
+				</div>
+				<p>The issue would be obtaining a feedstock high enough in silica to take advantage of this. The method proposed in the <a href="https://www.moonwards.com/machinesMining.html#SolarFurnace">Solar Thermal Furnace</a> section, of separating pyroxene from bulk regolith by melting it and spinning it in a centrifuge at the right temperature, might resolve this issue if combined with a second step. The pyroxene can be melted again, and if spun at a somewhat higher temperature, the olivine will separate from the rest. Then the liquid poured off would be almost all a mixture of silicon, oxygen, and calcium. In that case, the proportion of calcium should be low enough for the glass to be dominated by bonds between oxygen and silicon, which are much stronger. With the additional strength the material would have due to having virtually no hydrogen bonds mixed into its crystal structure (from water contamination), this material may make good cable.
 				</p>
 				<p>
-					All these designs absolutely depend on the use of agile
-					robots. They don't have to be carpenters, but they do
-					need the manual skills of your typical 5 year old.
-					Guided by human operators on Earth, that would be enough.
-					Several development missions would need to go to the Moon
-					to test and refine that technology.
+					All these designs absolutely depend on the use of agile robots. They don't have to be carpenters, but they do need the manual skills of your typical 5 year old. Guided by human operators, that would be enough.
 				</p>
 				<p>
-					If you have those robots, what follows is the best way to
-					build. By far, no contest. It is far less energy intensive,
-					and far more adaptable, than anything else I've seen. The
-					equipment needed to start is far less, and less complex.
-					Except for the robots, of course, which are so broadly useful
-					they are still quite mass-efficient, even if they need a bunch
-					of modular drop-in replacement parts shipped with them.
-				</p>
-				<p>
-					So, if you perhaps calculate that
-					such robots are a long way off, still by the time Cernan's
-					Promise was fully developed, they would exist and have been
-					used for the bulk of that construction. We can quibble
-					later about the most plausible way to
-					present the first few missions, when those robots are in
-					development and can't be relied on. The winds blow very
-					strongly towards their development, so
-					it is sound policy to explore what they can do.
+					If you have those robots, what follows is the best way to build. It is far less energy intensive, and far more adaptable, than anything else I've seen. The most energy intensive processes can all be done by concentrating the strong constant sunlight, which is easily done with lenses alone. The equipment needed to start is far less, and less complex. Except for the robots, of course, which are so broadly useful they are still quite mass-efficient, even if they need a bunch of modular drop-in replacement parts shipped with them.
 				</p>
 			</div>
 		</div>
