--- a/_includes/machines/machinesRobots.html
+++ b/_includes/machines/machinesRobots.html
@@ -1,87 +1,38 @@
 <div class="container" id="robots">
 	<section>
-	<div class="outerDiv">
+	<article class="outerDiv">
 		<div class="innerDiv">
 			<h1>Rovers and Robots - the Workhorses</h1>
 			<p>
-				In this project, the approach is taken that the first missions to settle
-				the Moon will focus on developing the robotic infrastructure needed to
-				do construction entirely without humans present. Such robots do not yet
-				exist, but the field is advancing quickly. Development of that
-				technology has a wealth of applications here on Earth, it would make
-				sense to make such R&amp;D a central part of a settlement space program.
-				A few missions
-				would be needed where a minimal crew go to support the prototype robots,
-				testing and fixing them, until there is confidence the robots can be
-				operated remotely from Earth. After that, the robots build the
-				first permanent habitat and its infrastructure without
-				anyone on-site. Once that hab is near completion,
-				again a crew
-				arrives. They test everything, maybe make some minor final touches.
-				Then they stay.
-				After that the human population ramps up quickly and they operate the
-				robotic machinery from within the habs.
-				<br><br>
-				So, great things come from great robots. Rovers in space are already
-				designed to handle factors not present on Earth. Rovers and robots on
-				the Moon will have extra challenges that have not yet been solved. The
-				list below takes them in ascending order of difficulty:
+				In this project, the approach is taken that the first missions to settle the Moon will focus on developing the robotic infrastructure needed to do construction entirely without humans present. Such robots do not yet exist, but the field is advancing quickly. Development of that technology has a wealth of applications here on Earth, it would make sense to make such R&amp;D a central part of a settlement space program.
+			</p>
+			<p>The first few missions to the surface work like rover missions today, except with many robots being operated from Earth instead of just one, and performing tasks as much to test their ability to manipulate their environment as to explore and study. Once a human crew is in orbit at Crossroads Station, which is the beginning of the first lunar skyhook, they do a mission to the surface to install equipment that allows the robots to do more demanding and precise work, perform repairs, and install a repair station they can run from Crossroads. The Crossroads crew takes over a large chunk of the remote operations, as the signal delay between them and the robots is imperceptible. After that, the robots build the first permanent habitat and its infrastructure without anyone on-site. (There could be more missions from Crossroads to the surface, but only if there are failures that make it necessary.) Once that hab is near completion, again a crew arrives. They test everything, maybe make some minor final touches. Then they stay. After that the human population ramps up quickly and they operate the robotic machinery from within the habs.
+			</p>
+			<p>So, great things come from great robots. Rovers and probes in space have already been designed to handle some of the things in the list below, others are new territory:
 			</p>
 				<ul>
 				<li>The	high radiation environment, which requires special design of computer
 					components. This technology is well developed, but does add cost and
 				  increases the bulk of components.</li>
-				<li>The 290 K temperature swing between day and night. Two key things
-				are important here:
-					<ul>
-						<li>Thermal wadis - which are masses of solid stone
-				that store the sun's heat far better than the powdery soil. If a rover can
-				snuggle up to one at sundown and throw a reflective tarp over
-				itself to slow
-				heat loss, the cold it has to withstand overnight is greatly reduced.
-				</li>
-					<li>Nuclear power - there is no reason to fear nuclear power on the
-						Moon. It is a great way to get through the long cold night, when
-						there is no solar power. Robots working at night can run their
-						heaters by drawing power beamed to them as microwaves from the
-						nuclear power plant
-					</li>
-				</ul> </li>
+				<li>On the Peaks of Eternal Light where the first missions are, the temperature change between day and night is not the concern. Instead, it is simply that the sun is very hot and the shade is very cold. Where the ice is, it is very, very cold. Ice mining equipment needs heaters and to be made of specialized materials. Other equipment can be protected with translucent shades that dilute the sunlight, the use of stone, which holds in heat, and some lighting, so it isn't difficult to see in the stark shadows. Away from the poles, where the day and the night are each two weeks long, the same techniques work when done on a larger scale. </li>
 				<li>
-				The extremely abrasive, finely
-				powdered soil that will grind away at any moving part it gets into.
-				And it comes with static cling. Some things can be wrapped to minimize
-				the dust that enters. Magnetic brushes seem quite effective for
-				dusting things off, though they haven't been tested on-site.
-				Ultimately, the best thing is to fuse the surface soil into a
-				solid cap of stone wherever robots
-				work (or people).
+				The extremely abrasive, finely powdered soil that will grind away at any moving part it gets into. And it comes with static cling. Moving parts like joints can be wrapped to minimize the dust that enters, possibly with multiple layers of material. Magnetic brushes seem quite effective for dusting things off, though they haven't been tested on-site. Ultimately, the best thing is to fuse the surface soil into a solid cap of stone wherever robots work (or people).
 			</li>
 			<li>
-				The 3 second round-trip transmission delay between Earth and Moon,
-				that will need to be designed for to make remote operation work.
-				So, if a robot is tipping over, it needs to look after that itself.
-				It needs to be able to handle simple, repetitive tasks on its own.
-				It needs protocols for collision avoidance. It needs to understand
-				what it is looking at well enough to direct itself as it moves around
-				and manipulates things.
+				The 3 second round-trip radio transmission delay between Earth and Moon. This is eliminated once there are enough people in orbit, and later at the base, to operate the robots locally. Before that, operation has to consider this factor. So the more the robots can do without needing specific instructions, the better. If a robot is tipping over, it needs regain its balance itself. It needs to be able to handle simple, repetitive tasks on its own. It needs protocols for collision avoidance. It needs to understand what it is looking at well enough to direct itself as it moves around and manipulates things. The video in the sidebar on Boston Dynamics shows how close to this we already are.
+			</li>
+			<li>Extending the point above, the need to be independent. It's doubtful it will ever make sense to have people work out in the open instead of robots. People should be outside only fairly briefly and rather infrequently, to limit their radiation exposure. People hampered by space suits are very clumsy and have trouble sensing their environment. Robots need to be able to do ever more things without human oversight.
 			</li>
 		</ul>
-		<p> The videos in the sidebar show we've made
-		big advances on these things, but there is a ways to go. It is
-		hard to overstate how much of a difference robots with these
-		capabilities make. They are absolutely necessary for success.
+		<p> It is hard to overstate how much of a difference robots with these capabilities make. They are absolutely necessary for success.
 		</p>
 		</div>
-	</div>
+	</article>
 </section>
 <aside>
 	<div class="sidePairTop">
 		<div class="framewrap frame16x9">
-				<iframe
-				src="https://www.youtube.com/embed/Tb0_GNyczCA"
-					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""
-				allowfullscreen></iframe>
+				<iframe src="ATHLETErov.html" style="overflow-y: hidden;" scrolling="no"></iframe>
 		</div>
 	</div>
 	<div class="sidePairBottom">
@@ -91,10 +42,7 @@
 	</div>
 	<div class="sidePairTop">
 		<div class="framewrap frame16x9">
-				<iframe
-				src="https://www.youtube.com/embed/AO4In7d6X-c" 
-					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""
-				allowfullscreen></iframe>"
+				<iframe src="SpotMini.html" style="overflow-y: hidden;" scrolling="no"></iframe>
 		</div>
 	</div>
 	<div class="sidePairBottom">
@@ -105,16 +53,11 @@
 	</div>
 	<div class="sidePairTop">
 		<div class="framewrap frame16x9">
-				<iframe
-				src="https://www.youtube.com/embed/3yCAZWdqX_Y?rel=0&amp;controls=0"
-					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""
-				allowfullscreen></iframe>"
+				<iframe src="WaymoCar.html" style="overflow-y: hidden;" scrolling="no"></iframe>
 		</div>
 	</div>
 	<div class="sidePairBottom">
-		<a href="https://www.tesla.com/autopilot">Tesla Autopilot
-		</a>test. Lots of companies are working on this, and
-		Google pioneered it. This video was just chosen because Elon.
+		<a href="https://waymo.com/">Waymo Cars</a> are now permitted on the roads in some jurisdictions with no driver, only passengers in the back seat. This company is also owned by Google.
 	</div>
 	<div class="sidePairTop">
 		<div class="framewrap frame16x9">
