--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -81,8 +81,9 @@
 					<li><a href="machinesTransport.html">Transport</a>
 						<ul>
 							<li><a href="machinesTransport.html#nuclearShuttles">Nuclear Shuttles</a></li>
-							<li><a href="machinesTransport.html#PodShip">Pod ship</a></li>
-							<li><a href="machinesTransport.html#TetherTransport">Vertical Tethers</a></li>
+							<li><a href="machinesTransport.html#PodShip">Pod Ships</a></li>
+							<li><a href="machinesTransport.html#ionDrive">IonDrives </a></li>
+							<li><a href="skyhooks.html">Skyhooks</a></li>
 						</ul>
 					</li>
 				</ul>
