--- a/_includes/timeline/ph3-trans.html
+++ b/_includes/timeline/ph3-trans.html
@@ -107,7 +107,7 @@
       </details>
     </details>
     <details id="spacestation2">
-      <summary><h5>2nd Earth-orbiting Space Station</h5></summary>
+      <summary><h5>2nd Earth-orbiting Space Station - Tesseract Station</h5></summary>
       <p>Using modules, tanks, solar panels, trusses, motors, pumps, radiators, and engines made on the Moon almost entirely from lunar and asteroid materials, another space station is placed in an equatorial orbit around Earth. The robots and ships that assemble the pieces are also made almost entirely on the Moon from lunar materials. </p>
       <p>This station is two cylinders on opposite sides of a spherical central hub. Around the hub is a box of trusses with open sides, large enough to extend over the near ends of the cylinders. The solar panel wings extend from either side of the box. Each cylinder spins fast enough to create a centrifugal force equal to a full Earth gravity on their outer walls. One spins clockwise, the other counterclockwise, and the hub remains stationary. </p>
       <p>At first the cylinders are wider in diameter than they are long. They are designed to be extended over time. They measure 200 m across and 100 m high each. When the station opens, they are almost entirely empty. They are filled in as businesses, facilities, and residences are created by people who invest in the station.</p>
