--- a/_includes/transport/tethers/EarthTether.html
+++ b/_includes/transport/tethers/EarthTether.html
@@ -4,7 +4,7 @@
             <h3>Advantages of Skyhooks over Space Elevators</h3>
             <ul>
                 <li>For Earth's first skyhook, the climb to the anchor is less than a fifth of the distance to an anchor in geosynchronous orbit. As cars on the cable can only go so fast, the time savings in the trip is helpful. Beaming the power the car needs for the climb from the anchor is also easier.</li>
-                <li>The cross-section of the cable is much less than that of a space elevator because the loads it must bear are much lower. Many skyhooks be made with the amount of material needed for one space elevator</li>
+                <li>The cross-section of the cable is much less than that of a space elevator because the loads it must bear are much lower. Many skyhooks can be made with the amount of material needed for one space elevator</li>
                 <li> If there is a grave accident and the cable is cut, the debris is far less dangerous. The bottom part of the cable of a severed space elevator, for the first 150 km or so above where it is connected to the ground, will crash to Earth without disintegrating and can do damage on impact. A severed skyhook cable enters the atmosphere fast enough to mostly disintegrate due to friction heating, and what doesn't is slowed to a gentle speed by the time it reaches the ground.</li>
                 <li>The security needed to protect an installation that starts 100 km above the Earth is much less than what is needed to protect something that reaches the ground</li>
                 <li>There is no need to deal with Earth's atmosphere, whereas a space elevator has to solve the problems of lightening strikes and the effects of weather on the cable.</li>
