--- a/_includes/transport/tethers/tetherStrength.html
+++ b/_includes/transport/tethers/tetherStrength.html
@@ -21,13 +21,15 @@
       </p>
       <p>Micrometeoroid strikes should be quite rare, but the cables need to be able to sustain them without risk to the skyhooks. The cables will be an open mesh weave that redistributes loads around any broken ropes in the weave. This weave was designed by Robert Hoyt at Tethers Unlimited. New ropes can be woven into the mesh by maintenance cars. Individual sections of mesh can be only a few hundred meters long, their ends looping through the ends of the mesh sections above and below at reinforced points. The mesh system also allows entire cable to be slowly replaced over time, rope by rope, section by section, until none of it is the original material.
       </p>
+    </div>
+    <div class="innerDiv">
       <h3>Future Cable Materials</h3>
       <p>Carbon nanotube (CNT) cable remains far in the future. Advances towards that goal remain slow. Developing a large amount of infrastructure in space is itself likely to speed the pace of progress on this. CNTs are one of the materials that can be created by vapor deposition on a carefully prepared substrate. Performing such work in the hard vacuum and microgravity of orbit is likely to permit approaches that yield larger quantities and superior quality. It's also easier to create and sustain higher processing temperatures in space. Temperature control can be energy intensive but quite precise and repeatable too. Different levels of gravity can be imitated on different levels of the rotating sections of the space station. All of these factors create opportunities for new approaches to materials production.
       </p>
       <p>
       The timeline doesn't make use of CNTs until 35 years after it starts. At that date, a skyhook for Earth is built using cable with tensile strength of 30 GPa. This is a reasonable estimation of the strength the first such cables could have. A material like that produced on industrial scales permits skyhooks to be built from Mercury to Titan.
       </p>
-      <p>
+      <p>Research into polymers and carbon materials may lead to unexpected finds that provide new solutions, too. Such a possibility is <a href="http://imechanica.org/files/PRL10114550108Yuntian.pdf">colossal carbon tubes (CCT)</a>, discovered through a collaboration among several research institutes and universities in China and America in 2008. They are made purely of a hexagonal mesh of carbon atoms, just like CNTs and graphene, but are double-walled tubes around 50 micrometers wide (which is colossal compared to CNTs) and have already been produced in lengths of several centimeters (which is enough to spin them into thread). Oddly, aside from that initial paper, nothing has been published about them. They display great promise if they could be produced in bulk. Their strength isn't that much higher than Zylon (UTS of 6.9 GPa) but they are extraordinarily light (about 0.12 g/cm<sup>3</sup>). As most of the mass of a tether is cable that is just there to support the mass of the cable itself, that makes a tremendous difference. If a way could be found to bind the CCT fibers together strongly enough, they could potentially outperform the carbon nanotube cable posited above.
       </p>
     </div>
   </div>
@@ -39,12 +41,14 @@
       Tether Tool page</a> is a great thing to play with to get a feel for vertical skyhooks. Pick any world from Mercury to Neptune, choose the foot, tip, and center of the tethers, the construction material, and the safety factor. Then review the rich list of information generated for a skyhook with those characteristics.
     </figcaption>
   </figure>
-  <div class="sideDiv">
-    <h3>Skyhooks of the SITH</h3>
-    In order of construction:
-    <details>
-    <summary><h5>The Lunar Constellation</h5></summary>
-    The complete skyhook system for the Moon has 2 orbiting the equator and 3 in staggered polar orbits.
-    </details>
-  </div>
+  <figure class="sideDiv">
+      <img src="img/CNT-thread.jpg">
+      <figcaption>An image taken with a scanning electron microscope of a thread being drawn and spun from a dense forest of individual carbon nanotubes. From <a href="http://science.sciencemag.org/content/306/5700/1358">Multifunctional Carbon Nanotube Yarns by Downsizing an Ancient Technology</a> by Zhang, Atkinson, and Baughman.
+      </figcaption>
+  </figure>
+  <figure class="sideDiv">
+      <img src="img/CCT-microscope.jpg">
+      <figcaption> Figure 2 from <a href="http://imechanica.org/files/PRL10114550108Yuntian.pdf">Strong and Ductile Colossal Carbon Tubes with Walls of Rectangular Macropores</a> by Zhang, Atkinson, and Baughman, showing schematic illustrations of colossal carbon tubes compared to images from a scanning electron microscope of actual tubes.
+      </figcaption>
+  </figure>
 </aside>
