--- a/_includes/transport/transportTethers.html
+++ b/_includes/transport/transportTethers.html
@@ -14,6 +14,9 @@
 <div class="container" id="AsteroidAnchors">
     {% include_relative _includes/transport/tethers/tetherStrength.html %}
 </div>
+<div class="container" id="skyhookTable">
+    {% include_relative _includes/transport/tethers/skyhookTable.html %}
+</div>
 <div class="container" id="AsteroidAnchors">
     {% include_relative _includes/transport/tethers/AsteroidAnchors.html %}
 </div>
