installed Piwik on all pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@ $(document).ready(function() {
 	});
 });
 		</script>
+		{%include piwikCode.html %}
 	</head>
 <body>
 {%include obsolete-warning.html %}
