--- a/_layouts/learnpage.html
+++ b/_layouts/learnpage.html
@@ -17,6 +17,7 @@ MathJax.Hub.Config({
 		</script>
 		<script async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 		<script src="js/planets.js"></script>
+		{%include piwikCode.html %}
 	</head>
 <body>
 {%include obsolete-warning.html %}
