--- a/_layouts/toolTemplate.html
+++ b/_layouts/toolTemplate.html
@@ -81,6 +81,9 @@ a, a:hover, a:visited {
 	user-select:none;
 }
 	</style>
+	{%include piwikCode.html %}
+</head>
+<body>
 		{%include nav.html%}
 		<div class="wrapper" id="main">
 			<h5 style="text-align: right; line-height: 0.5em;"><a href="learn.html">Back to Learn</a></h5>
