--- a/_layouts/defaultMinimal.html
+++ b/_layouts/defaultMinimal.html
@@ -7,6 +7,7 @@
 		<link rel="alternate" type="application/rss+xml" title="Moonwards News" href="/feed/rss.xml">
 		<link rel="stylesheet" href="{{page.stylesheet}}">
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">
+		{%include piwikCode.html %}
 	</head>
 <body>
 {%include obsolete-warning.html %}
